--- a/net/samba/Makefile.mirrors
+++ b/net/samba/Makefile.mirrors
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.mirrors,v 1.3 2006/04/01 04:55:35 jlam Exp $
+# $NetBSD: Makefile.mirrors,v 1.4 2007/06/08 20:52:18 jdolecek Exp $
 #
 # This Makefile fragment contains the mirror sites for fetching Samba.
 
@@ -14,7 +14,7 @@ SAMBA_MIRRORS=	\
 	ftp://ftp.pucpr.br/samba/ \
 	http://mirrors.uol.com.br/pub/samba/ \
 	ftp://ftp.uni-sofia.bg/samba/ \
-	ftp://mirror.kn.vutbr.cz/pub/MIRRORS/samba/ \
+	ftp://mirror.kn.vutbr.cz/pub/ftp.samba.org/ \
 	ftp://mirrors.dotsrc.org/samba/ \
 	ftp://fi.samba.org/pub/samba/ \
 	ftp://de.samba.org/samba.org/ \
