--- a/print/ruby-gnome2-gnomeprint/Makefile
+++ b/print/ruby-gnome2-gnomeprint/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/05/26 06:24:28 obache Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/09 01:07:13 obache Exp $
 #
 
 PKGNAME=		${RUBY_PKGPREFIX}-gnome2-gnomeprint-${VERSION}
@@ -8,7 +8,7 @@ CATEGORIES=		print
 RUBY_EXTCONF_SUBDIRS=	gnomeprint
 
 DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-glib>=${VERSION}:../../devel/ruby-gnome2-glib
-DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-pango>=${VERSION}:../../devel/ruby-gnome2-glib
+DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-pango>=${VERSION}:../../devel/ruby-gnome2-pango
 DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-libart>=${VERSION}:../../graphics/ruby-gnome2-libart
 USE_TOOLS+=		pkg-config
 
