--- a/time/planner/Makefile
+++ b/time/planner/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/06/02 16:42:03 jmmv Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/09 08:01:21 jmmv Exp $
 #
 
 DISTNAME=	planner-0.14.2
@@ -15,6 +15,10 @@ USE_DIRS+=		gnome2-1.5
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		gmake intltool msgfmt pkg-config
 USE_LIBTOOL=		yes
+
+PKGCONFIG_OVERRIDE=	libplanner-1.pc.in
+
+CONFIGURE_ARGS+=	--enable-python=no
 
 GCONF2_SCHEMAS=		planner.schemas
 
