--- a/devel/qconf/Makefile
+++ b/devel/qconf/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/05/15 11:19:24 rillig Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/09 10:46:01 rillig Exp $
 #
 
-DISTNAME=		qconf-1.2
+DISTNAME=		qconf-1.3
 CATEGORIES=		devel
 MASTER_SITES=		http://delta.affinix.com/download/
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		rillig@NetBSD.org
-HOMEPAGE=		http://delta.affinix.com/download/
+HOMEPAGE=		http://delta.affinix.com/qconf/
 COMMENT=		Configure script generator for qmake
 
 USE_PKGLOCALEDIR=	yes
