--- a/x11/lablgtk2/Makefile
+++ b/x11/lablgtk2/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.23 2007/06/05 05:37:40 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2007/06/09 13:17:18 wiz Exp $
 #
 
 DISTNAME=	lablgtk-2.6.0
 PKGNAME=	${DISTNAME:S/gtk/gtk2/}
-PKGREVISION=	11
+PKGREVISION=	12
 CATEGORIES=	x11
 MASTER_SITES=	http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/
 
@@ -21,12 +21,9 @@ BUILDLINK_DEPMETHOD.ocaml=	full
 # previous name of this package; does not conflict with lablgtk-1.*
 CONFLICTS=	lablgtk-2.*
 
-.include "../../devel/libglade2/buildlink3.mk"
-.include "../../devel/libgnomeui/buildlink3.mk"
-.include "../../graphics/libgnomecanvas/buildlink3.mk"
-.include "../../graphics/librsvg2/buildlink3.mk"
+.include "options.mk"
+
 .include "../../lang/ocaml/buildlink3.mk"
 .include "../../textproc/gtkspell/buildlink3.mk"
-.include "../../x11/gnome-panel/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
