--- a/pkgtools/x11-links/Makefile
+++ b/pkgtools/x11-links/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.82 2007/04/22 11:02:18 tnn Exp $
+# $NetBSD: Makefile,v 1.83 2007/06/09 23:05:42 reed Exp $
 #
 # NOTE:	If you update this package, then you'll likely need to also update
 #	the x11-links dependency in buildlink3.mk to the correct version,
 #	usually the most recent.
 
-DISTNAME=	x11-links-0.30
+DISTNAME=	x11-links-0.31
 CATEGORIES=	pkgtools x11
 MASTER_SITES=	# empty
 DISTFILES=	# empty
