--- a/archivers/p5-Archive-Tar/Makefile
+++ b/archivers/p5-Archive-Tar/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.25 2007/06/08 08:33:50 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2007/06/09 23:20:26 abs Exp $
 
-DISTNAME=		Archive-Tar-1.30
+DISTNAME=		Archive-Tar-1.32
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5tar
 CATEGORIES=		archivers perl5
