--- a/devel/p5-Carp-Clan/Makefile
+++ b/devel/p5-Carp-Clan/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2007/02/27 12:36:39 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2007/06/09 23:26:44 abs Exp $
 #
 
-DISTNAME=		Carp-Clan-5.8
+DISTNAME=		Carp-Clan-5.9
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5ccl
 CATEGORIES=		devel perl5
@@ -9,7 +9,7 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Carp/}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Carp-Clan/
-COMMENT=		Report errors from perspective of caller of a "clan" of modules
+COMMENT=		Report errors from perspective of a "clan" of modules
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
