--- a/devel/p5-Clone/Makefile
+++ b/devel/p5-Clone/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2006/10/24 13:14:59 obache Exp $
+# $NetBSD: Makefile,v 1.10 2007/06/09 23:29:37 abs Exp $
 
-DISTNAME=	Clone-0.22
+DISTNAME=	Clone-0.23
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Clone/}
