--- a/devel/p5-ExtUtils-CBuilder/Makefile
+++ b/devel/p5-ExtUtils-CBuilder/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/05/15 14:56:51 seb Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/09 23:31:25 abs Exp $
 
-DISTNAME=	ExtUtils-CBuilder-0.18
+DISTNAME=	ExtUtils-CBuilder-0.19
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5ecb
 CATEGORIES=	devel perl5
