--- a/devel/p5-PAR-Dist/Makefile
+++ b/devel/p5-PAR-Dist/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2006/10/30 13:01:35 obache Exp $
+# $NetBSD: Makefile,v 1.9 2007/06/09 23:39:03 abs Exp $
 #
 
-DISTNAME=	PAR-Dist-0.21
+DISTNAME=	PAR-Dist-0.22
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5moi
 CATEGORIES=	devel perl5
