--- a/devel/p5-Params-Util/Makefile
+++ b/devel/p5-Params-Util/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2007/04/22 13:06:23 seb Exp $
+# $NetBSD: Makefile,v 1.4 2007/06/09 23:43:15 abs Exp $
 
-DISTNAME=	Params-Util-0.23
+DISTNAME=	Params-Util-0.25
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Params/}
