--- a/databases/p5-DBD-postgresql/Makefile
+++ b/databases/p5-DBD-postgresql/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.40 2007/03/21 19:44:10 jwise Exp $
+# $NetBSD: Makefile,v 1.41 2007/06/09 23:45:18 abs Exp $
 #
 
-VER=		1.48
+VER=		1.49
 DISTNAME=	DBD-Pg-${VER}
 PKGNAME=	p5-DBD-postgresql-${VER}
 SVR4_PKGNAME=	p5dpo
-PKGREVISION=	3
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
