--- a/time/p5-DateTime/Makefile
+++ b/time/p5-DateTime/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2007/02/27 13:08:24 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2007/06/09 23:46:42 abs Exp $
 
-DISTNAME=	DateTime-0.36
+DISTNAME=	DateTime-0.37
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
