--- a/time/p5-DateTime-Locale/Makefile
+++ b/time/p5-DateTime-Locale/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2007/02/27 13:05:59 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2007/06/09 23:47:41 abs Exp $
 
-DISTNAME=	DateTime-Locale-0.33
+DISTNAME=	DateTime-Locale-0.34
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
