--- a/www/p5-Template-Toolkit/Makefile
+++ b/www/p5-Template-Toolkit/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.25 2007/03/01 12:56:25 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2007/06/09 23:54:01 abs Exp $
 #
 
-DISTNAME=	Template-Toolkit-2.15
+DISTNAME=	Template-Toolkit-2.19
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 SVR4_PKGNAME=	p5tto
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Template/}
