--- a/sysutils/coreutils/Makefile.common
+++ b/sysutils/coreutils/Makefile.common
@@ -37,6 +37,11 @@ CONFIGURE_ENV+= 	gl_cv_search_pthread_join=-lpthread
 CONFIGURE_ENV+=		FORCE_UNSAFE_CONFIGURE=1
 .endif
 
+# Explicitly disable inotify support whilst it is Linux-specific.
+.if ${OPSYS} == "SunOS"
+CONFIGURE_ENV+=		ac_cv_func_inotify_init=no
+.endif
+
 .if !empty(MACHINE_PLATFORM:MDarwin-[9].*-*)
 CONFIGURE_ENV+=		ac_cv_header_sys_acl_h=no jm_cv_func_svid_putenv=yes
 .endif
