--- a/net/powerdns/Makefile.common
+++ b/net/powerdns/Makefile.common
@@ -20,6 +20,7 @@ GNU_CONFIGURE_LIBSUBDIR=pdns
 CONFIGURE_ARGS+=	--enable-pdns_server
 CONFIGURE_ARGS+=	--with-system-polarssl
 CONFIGURE_ARGS+=	--without-lua
+CONFIGURE_ENV+=		CXXCPP="${CXX} -E"
 
 BUILDLINK_TRANSFORM+=	rm:-fstack-protector
 
