--- a/converters/dos2unix/Makefile
+++ b/converters/dos2unix/Makefile
@@ -13,7 +13,7 @@ CONFLICTS=	unix2dos-[0-9]*
 
 USE_TOOLS+=	gmake msgfmt xgettext perl
 
-BUILD_MAKE_FLAGS+=	LDFLAGS_EXTRA+="${COMPILER_RPATH_FLAG}${PREFIX}/lib -lintl"
+BUILD_MAKE_FLAGS+=	LDFLAGS_EXTRA+="-L${PREFIX}/lib ${COMPILER_RPATH_FLAG}${PREFIX}/lib -lintl"
 INSTALL_MAKE_FLAGS+=	prefix=${PREFIX}
 
 .include "../../devel/gettext-lib/buildlink3.mk"
